--- a/Flagrum.Web/Components/Controls/EnumSelect.razor
+++ b/Flagrum.Web/Components/Controls/EnumSelect.razor
@@ -7,14 +7,17 @@
         class="input bg-dark-550 w-full">
     @foreach (var item in Enum.GetValues(typeof(TEnum)))
     {
-        <option value="@item" class="text-grey-400">@(AutoSpaceNames ? item.ToString().SpacePascalCase() : item.ToString())</option>
+        <option value="@item" class="text-grey-400">@(Localizer == null ? item.ToString() : Localizer[$"{LocalizerPrefix}{item}"])</option>
     }
 </select>
 
 @code
 {
     [Parameter]
-    public bool AutoSpaceNames { get; set; }
+    public IStringLocalizer Localizer { get; set; }
+    
+    [Parameter]
+    public string LocalizerPrefix { get; set; }
 
     private void OnChange(ChangeEventArgs e)
     {
