--- a/Flagrum.Web/Features/EarcMods/Modals/ModCardModal.razor
+++ b/Flagrum.Web/Features/EarcMods/Modals/ModCardModal.razor
@@ -24,7 +24,7 @@
     </HeaderView>
     <BodyView>
         <div class="flex flex-row">
-            <EditForm Model="Mod" OnValidSubmit="Submit" class="shadow-md">
+            <EditForm Model="Mod" OnValidSubmit="Submit" class="shadow-md flex-shrink-0">
                 <DataAnnotationsValidator/>
                 <img alt="Mod Thumbnail" class="relative rounded-t" style="display: block; width: 330px; height: 180px;" src="images/@(ImageName).png"/>
                 <div class="p-4 flex-grow flex flex-col">
@@ -42,30 +42,32 @@
                     <Button Icon="save" Text=@EditorLocalizer["Save"] Type="submit"/>
                 </div>
             </EditForm>
-            <div class="bg-dark px-6 pt-6 flex-grow rte-container" style="padding-bottom: 102px;">
+            <div class="bg-dark px-6 pt-6 flex-grow flex-shrink rte-container" style="padding-bottom: 102px;">
                 <h6 class="text-grey-300 mb-4">@Localizer["Readme"]</h6>
-                <BlazoredTextEditor @ref="Editor" Placeholder="@string.Empty">
-                    <ToolbarContent>
-                        <select class="ql-header">
-                            <option selected=""></option>
-                            <option value="1"></option>
-                            <option value="2"></option>
-                            <option value="3"></option>
-                            <option value="4"></option>
-                            <option value="5"></option>
-                        </select>
-                        <span class="ql-formats">
-                            <button class="ql-bold"></button>
-                            <button class="ql-italic"></button>
-                            <button class="ql-underline"></button>
-                            <button class="ql-strike"></button>
-                        </span>
-                        <span class="ql-formats">
-                            <button class="ql-list" value="ordered"></button>
-                            <button class="ql-list" value="bullet"></button>
-                        </span>
-                    </ToolbarContent>
-                </BlazoredTextEditor>
+                <div style="max-width: 646px;">
+                    <BlazoredTextEditor @ref="Editor" Placeholder="@string.Empty">
+                        <ToolbarContent>
+                            <select class="ql-header">
+                                <option selected=""></option>
+                                <option value="1"></option>
+                                <option value="2"></option>
+                                <option value="3"></option>
+                                <option value="4"></option>
+                                <option value="5"></option>
+                            </select>
+                            <span class="ql-formats">
+                                <button class="ql-bold"></button>
+                                <button class="ql-italic"></button>
+                                <button class="ql-underline"></button>
+                                <button class="ql-strike"></button>
+                            </span>
+                            <span class="ql-formats">
+                                <button class="ql-list" value="ordered"></button>
+                                <button class="ql-list" value="bullet"></button>
+                            </span>
+                        </ToolbarContent>
+                    </BlazoredTextEditor>
+                </div>
             </div>
         </div>
     </BodyView>
