--- a/Flagrum.Web/Components/Controls/Hyperlink.razor
+++ b/Flagrum.Web/Components/Controls/Hyperlink.razor
@@ -1,10 +1,13 @@
 ﻿@using System.Diagnostics
-<span @onclick="OnClick" class="hyperlink">@Text</span>
+<span @onclick="OnClick" class="text-accent1-200 inline-block underline cursor-pointer hover:text-white @CssClass">@Text</span>
 
 @code
 {
     [Parameter] public string Text { get; set; }
     [Parameter] public string Uri { get; set; }
+
+    [Parameter]
+    public string CssClass { get; set; } = "mt-2";
     
     private void OnClick()
     {
